--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-    <h1>Puppy Bowl Teams</h1>
+    <h1>Puppy Bowl Puppies</h1>
     <main>
     </main>
   </body>
