changed background to an image and added background to li texts for legibility

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
   </head>
   <body>
-    <h1>Puppy Bowl Puppies</h1>
+    <h1><span>Puppy Bowl Puppies</span></h1>
     <main>
     </main>
   </body>
